# deepresearcher

./: .env  .gitignore  DEPLOY_README.md  DOCKER_QUICKSTART.md  Dockerfile  README.md  README_FRONTEND.md  app.py  frontend.py  pyproject.toml  requirements.txt  start_app.py
configs/: __init__.py  domains.py  intent.py  templates.yml
deep_researcher.egg-info/: PKG-INFO  SOURCES.txt
deploy/configs/: env.example
deploy/docker/: .dockerignore  Dockerfile  docker-compose.dev.yml  docker-compose.yml
deploy/docs/: DEPLOYMENT.md  QUICKSTART.md
deploy/scripts/: Makefile  start.sh  stop.sh
research_result/: checkpoint.json  metrics.jsonl
research_result/reports/: 20250905_221126_An_Analysis_of_basic.txt  20250905_221126_An_Analysis_of_full.json  20250905_221126_An_Analysis_of_metadata.json  20250906_102436_An_Analysis_of_basic.txt  20250906_102436_An_Analysis_of_full.json  20250906_102436_An_Analysis_of_metadata.json  20250906_103323_An_Exploration_of_basic.txt  20250906_103323_An_Exploration_of_full.json  20250906_103323_An_Exploration_of_metadata.json
src/agents/: generate_report_agent.py  knowledge_retrieval_agent.py  problem_understanding_agent.py  report_validation_agent.py  revision_agent.py  structure_planning_agent.py  writing_polishing_agent.py
src/api/: server.py
src/core/: graph.py  state.py
src/external_knowledge/: deep_search.py  search_service.py
src/llm_adapter/: __init__.py  llm.py
src/utils/: __init__.py  agent_common.py  agent_utils.py  api_logger.py  cache.py  checkpoint.py  domain_classifier.py  improved_revision.py  llm_utils.py  (+5 more)
